# manuheart-python

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml  security.yml
docs/: ai-agent-operation-boundary.md  architecture-deployment-notes.md  baseline-inventory.md  bash-implementation-understanding.md  code-analysis-improvement-opportunities.md  deployment-test-config.md  fixture-intake-policy.md  health-state-semantics.md  implementation-audit-tasks.md  implementation-checklist.md  localhost-compatibility-differences.md  prioritization.md  product-framing.md  product-process-classification.md  python-architecture-proposal.md  qa-evidence.md  release-posture.md  requirements.md  rollback-disable.md  scope.md  security-privacy-notes.md  workflows.md
docs/release/: pypi-trusted-publishing.md
docs/security-audits/: 2026-06-05-nightly.md  2026-06-24-nightly.md
examples/deployment-test/: public-smoke.json
examples/localhost/: groups  hosts  manuheart.conf  manuheart.json  manuheart.yaml
examples/synthetic-compat/: groups  hosts  manuheart.conf  manuheart.json  manuheart.yaml
scripts/: check_clean_install.py  check_dependency_security.py  check_localhost_compatibility.py  check_osv_scanner.py  check_publish_workflow_policy.py  install_osv_scanner.py
src/manuheart/: __init__.py  __main__.py  api.py  checkers.py  cli.py  config.py  errors.py  health.py  models.py  reporting.py  state.py
tests/: test_api_smoke.py  test_api_typing.py  test_checkers.py  test_config.py  test_health.py  test_overrides_cli_state.py  test_reporting.py  test_security_scripts.py
tests/fixtures/legacy-edge-cases/: groups  hosts  manuheart.conf
tools/: osv-scanner.lock.json
