[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "manuheart"
version = "0.1.1"
description = "Python rewrite of the Manuheart health checker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Russ Davies" }
]
dependencies = [
  "httpx>=0.27",
  "icmplib>=3.0",
  "idna>=3.15",
]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
release = [
  "build>=1.2",
  "twine>=5.1",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-PyYAML>=6.0",
  "pip-audit>=2.10",
  "build>=1.2",
  "twine>=5.1",
]

[project.urls]
Repository = "https://github.com/RusDavies/manuheart-python"
Changelog = "https://github.com/RusDavies/manuheart-python/blob/main/CHANGELOG.md"

[project.scripts]
manuheart = "manuheart.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/manuheart"]

[tool.hatch.build.targets.wheel.force-include]
"src/manuheart/py.typed" = "manuheart/py.typed"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["manuheart"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["icmplib"]
ignore_missing_imports = true
